# shop

./: README.md  docker-compose.yml  pyproject.toml
frontend-shop/: README.md  package-lock.json  package.json
frontend-shop/mockserver/: docker-compose.yml  initializerJson.json
frontend-shop/public/: index.html
frontend-shop/src/: App.js  Basket.js  Product.js  ProductDescription.js  ProductsView.js  actions.js  data.json  index.css  index.js  reducers.js  store.js
shop/: settings.py  urls.py
