[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Kinga Syta <kingaasyta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
black = "^24.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
